--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-asgiref==3.5.0
 Django==3.2.12
-pytz==2022.1
-sqlparse==0.4.2
+django-bootstrap-v5==1.0.11
+django-extensions==3.1.5
+ipython==8.1.1
+Pillow==9.1.0
