--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,python,django,visualstudiocode,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,python,django,visualstudiocode,venv
 
+test.html
+
 ### Django ###
 *.log
 *.pot
