--- a/requirements.txt
+++ b/requirements.txt
@@ -21,23 +21,6 @@ django-bootstrap-v5==1.0.11
 django-ckeditor==6.4.0
 django-extensions==3.1.5
 django-js-asset==2.0.0
-executing==0.8.3
-ipython==8.1.1
-jedi==0.18.1
-matplotlib-inline==0.1.3
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.1.0
-prompt-toolkit==3.0.29
-pure-eval==0.2.2
-Pygments==2.12.0
-pytz==2022.1
-six==1.16.0
-soupsieve==2.3.2.post1
-sqlparse==0.4.2
-stack-data==0.2.0
-traitlets==5.1.1
-wcwidth==0.2.5
 django-seed==0.3.1
 djangorestframework==3.13.1
 entrypoints==0.3
@@ -63,16 +46,20 @@ MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
 mypy-extensions==0.4.3
+mysql-connector-python==8.0.29
 nbclient==0.5.10
 nbconvert==6.4.0
 nbformat==5.1.3
 nest-asyncio==1.5.4
 notebook==6.4.7
+numpy==1.22.3
 packaging==21.3
+pandas==1.4.2
 pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.9.0
 pickleshare==0.7.5
+Pillow==9.1.0
 platformdirs==2.4.1
 prometheus-client==0.12.0
 prompt-toolkit==3.0.29
